# jdstamp.github.io

./: CNAME  _config.yml  pyproject.toml
_data/: navigation.yml
_includes/: archive-single-software.html
_includes/head/: custom.html
_layouts/: default.html
_pages/: about.md  cv.md  publications.md  software.html
_portfolio/: 01-mvmapit.html  02-devops.html  03-templated-ligation.html
_publications/: 2019-continuous-nonenzymatic-cross-replication.md  2022-mvmapit.md  2023-mvmapit-software.md  2023-mvmapit.md  2024-considerations-epistasis.md  2024-ebv-burkitt.md  2024-ildsc.md  2024-sars-cov-2.md  2025-cphmapit-software.md  2025-ebv-burkitt.md  2025-epi-nat-news-views.md  2025-sme-software.md  2025-sme.md
_talks/: 2023-07-19-epistasis-conference.md  2023-07-27-mvmapit-ismb.md  2025-07-21-sme-ismb.md
_teaching/: 2021-fall-bio-1430-popgen.md
files/: CV_JulianStamp.docx  ~$_JulianStamp.docx
